# once-around

./: .gitignore  .loom-managed  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  loom.sh  node_modules  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
.claude/: README.md  settings.json
.claude/agents/: loom-builder.md  loom-daemon.md
.github/workflows/: ci.yml  refresh-minor-body-elements.yml  refresh-satellite-ephemeris.yml
.loom/: CLAUDE.md  config.json  install-metadata.json
.loom/config/: skill-routes.json
.loom/hooks/: guard-destructive.sh  methodology-inject.sh
.loom/roles/: curator.md
.loom/scripts/: agent-destroy.sh  agent-metrics.sh  archive-transcripts.sh  build-gate.sh  check-host-sleep.sh  check-main-clean.sh  claude-wrapper.sh  merge-pr.sh  pr-worktree.sh  reconcile-stack.sh  spawn-claude.sh  start-daemon.sh  stop-daemon.sh  (+3 more)
crates/sky_engine/: Cargo.toml
crates/sky_engine/src/: lib.rs
data/: catalog.csv  catalog.json  ephemeris.json  final_placements.csv  final_placements.json  once_around_catalog.json  paul_fellows_videos.json  video_placements.csv  video_placements.json  videos_clean.json  viz_placements.json
docs/: COMPLETED_FEATURES.md
playwright-report/: index.html
scripts/: build_catalog.js  catalog_stats.js  create_final_placements.js  create_placement_data.js  extract_objects.js  fetch_ephemeris.js  fetch_horizons_reference.py  generate-orbits.mjs  generate-videos-json.js  generate_iss_ephemeris.py  generate_minor_body_elements.py  generate_satellite_ephemeris.py  generate_table.js  get_transcripts.sh  scrape_transcripts.js  scrape_youtube.js  test_generate_minor_body_elements.py
tests/: basic.spec.ts  diagnose-mobile-loading.spec.ts  mobile-fixes.spec.ts  pale-blue-dot.spec.ts  performance.spec.ts  prod-perf.spec.ts  supernova-tours.spec.ts  test-loading-hang.ts  topocentric.spec.ts  tours.spec.ts  tycho-supernova.spec.ts
(+467 files in other folders)
